--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports":true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
